tests/baselines/reference/recursiveInheritanceGeneric.errors.txt
==== tests/cases/compiler/recursiveInheritanceGeneric.ts (1 errors) ====
    interface I5<T> extends I5<T> { 
              ~~
!!! recursiveInheritanceGeneric.ts(1,11): error TS2100: Type 'I5<T>' recursively references itself as a base type.
        foo():void;
    }  